--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Nikolice @ GitHub</title>
   </head>
   <body>
-    2019.10.14
+    IT-Step:
+    <ol>
+      <li><a href="IT-Step/2019.10.14/index.html">2019.10.14 - Отрывок из серии книг «Властелин Колец»</a></li>
+    </ol>
   </body>
 </html>
