--- a/IT-Step/2019.10.14/index.html
+++ b/IT-Step/2019.10.14/index.html
@@ -65,7 +65,7 @@
         <header>
             <h1>Книга <span class="time">пятая</span></h1>
             <table>
-                <caption><h2>Оглавление</h2></caption>
+                <caption>Оглавление</caption>
                 <tr>
                     <td><a href="#heading-1">Глава № <span class="time">1</span>: <span class="title location name">Минас Тирит</span></a>.</td>
                     <td><a href="#note-1">Заметка № <span class="time">1</span></a>.</td>
@@ -77,10 +77,6 @@
                 <tr>
                     <td><a href="#heading-3">Глава № <span class="time">3</span>: <span class="title"><span class="location name">Рохан</span> – собирает войска</span></a>. </td>
                     <td><a href="#note-3">Заметка № <span class="time">3</span></a>.</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
                 </tr>
                 <tr>
                     <td><a href="#heading-4">Глава № <span class="time">4</span>: <span class="title">Осада <span class="location">Города</span></span></a>.</td>
