--- a/IT-Step/2019.10.14/index.html
+++ b/IT-Step/2019.10.14/index.html
@@ -851,7 +851,7 @@
                     <h3>Заметка № <span class="time">5</span></h3> 
                     <p>
                         Тут (по не-воле) – 
-                        начнёшь ощущать <span class="person">себя</span>
+                        начнёшь ощущать <span class="person">себя</span> –
                         <span class="person">ни-кому</span> не нужной <span class="irony">обузой</span>.
                     </p>
                 </section>
