--- a/IT-Step/2019.10.14/index.html
+++ b/IT-Step/2019.10.14/index.html
@@ -152,17 +152,17 @@
 
                 <p>
                     <span class="person">Он</span> – пытался <span class="information">вспомнить</span>: 
-
-                    <blockquote>
-                        <q class="non-direct">
-                            <strong>Что</strong> с <span class="person">ним</span>?
-                        </q>
-                        и
-                        <q class="non-direct">
-                            <strong><span class="location">Где</span></strong> <span class="person">он</span>?
-                        </q> 
-                    </blockquote>
                 </p>
+
+                <blockquote>
+                    <q class="non-direct">
+                        <strong>Что</strong> с <span class="person">ним</span>?
+                    </q>
+                    и
+                    <q class="non-direct">
+                        <strong><span class="location">Где</span></strong> <span class="person">он</span>?
+                    </q> 
+                </blockquote>
 
                 <p>
                     – но <span class="information">мысли</span> – путались:
@@ -723,14 +723,14 @@
                     
                     <blockquote>
                         <q>
-                            Укажу, – когда <span class="information">узнаю</span>, 
-                            что <span class="person">ты</span> можешь! … 
+                            Укажу – когда <span class="information">узнаю</span>, 
+                            что <span class="person">ты</span> можешь… 
                             А для этого, – лучше всего – 
                             оставить <span class="person">тебя</span> – 
                             при <span class="person">себе</span>… 
                             Будешь – выполнять <span class="person">мои</span> поручения, 
-                            <span class="information">беседовать</span> (со <span class="person">мной</span>, 
-                            когда будет <span class="time">время</span>)… 
+                            <span class="information">беседовать</span> (со <span class="person">мной</span>), 
+                            когда будет <span class="time">время</span>… 
                             <span class="information">Петь</span> – умеешь?
                         </q>
                     </blockquote>
@@ -745,13 +745,13 @@
 
                 <p>
                     <span class="person name">Мерри</span> – 
-                    лежал (завернувшись: в <span class="item">одеяло</span>) – 
-                    и (<span class="state">тщетно</span>) вглядывался: 
+                    лежал (завернувшись в <span class="item">одеяло</span>) – 
+                    и (<span class="state">тщетно</span>) вглядывался 
                     в <span class="nature">темноту</span>… 
                     <span class="time">Ночь</span> – была <span class="state">тихой</span>, 
                     <span class="state">без-ветренной</span>: 
-                    только <span class="nature">деревья</span> (чуть слышно) – 
-                    вздыхали (<span class="location">во-круг</span>)… 
+                    только <span class="nature">деревья</span> – (чуть слышно) – 
+                    вздыхали, <span class="location">во-круг</span>… 
                 </p>
 
                 <p>
@@ -778,7 +778,8 @@
 
                 <p>
                     Пахло – <span class="animal">лошадьми</span>… 
-                    <span class="person name">Мерри</span> – слышал: как они пофыркивают и (мягко) переступают копытами, 
+                    <span class="person name">Мерри</span> – слышал: как они пофыркивают 
+                    и (мягко) переступают <span class="animal item">копытами</span>, 
                     по (усыпанной <span class="nature item">хвоей</span>) земле… 
                 </p>
 
@@ -787,7 +788,7 @@
                     <span class="person name">Теоден</span> –
                     остановился в глухом сосновом <span class="nature location">бору</span> 
                     (у подножия сигнального холма <span class="location name">Эленах</span>: 
-                    поднимавшегося – высоко – над вершинами <span class="location name">Друаданского Леса</span>).
+                    поднимавшегося высоко – над вершинами <span class="location name">Друаданского Леса</span>).
                 </p>
 
                 <p>
@@ -810,7 +811,7 @@
                     <q class="non-direct">
                         Зачем – так рвался (в этот поход)? …
                         Ведь ясный приказ (<span class="person">короля</span>) –
-                        позволял (<span class="person">ему</span>) остаться?
+                        позволял <span class="person">ему</span> остаться?
                     </q>
                 </blockquote>
 
@@ -820,7 +821,7 @@
 
                 <blockquote>
                     <q class="non-direct"><span class="information">Знает</span> ли <span class="person">король</span> – 
-                        о (<span class="person">его</span>) само-управстве?
+                        о <span class="person">его</span> само-управстве?
                     </q>
                     <p>
                         И если <span class="information">знает</span> (то), – 
@@ -838,28 +839,27 @@
 
                     <p>
                         Во всяком случае, – <span class="person">воины</span> – <span class="irony">старались</span> 
-                        не замечать лишнего <span class="person">ново-бранца</span>: 
-                        с <span class="person">ним</span> – <span class="person">ни-кто</span> 
-                        не заговаривал, а если и смотрели – то – как на лишнюю, пере-мётную суму 
+                        не замечать <span class="person">лишнего ново-бранца</span>: 
+                        с <span class="person">ним</span> – <span class="person">никто</span> 
+                        не заговаривал, а если и смотрели – то как на лишнюю перемётную суму 
                         (за спиной <span class="person name">Дерн-Хельма</span>)… 
-                        Да и сам (молодой) <span class="person">Всадник</span> – (за всю дорогу!) – 
-                        не проронил ни <span class="information">слова</span>.
+                        Да и сам <span class="person">молодой Всадник</span> – (за всю дорогу!) – 
+                        не проронил <span class="information">ни слова</span>.
                     </p>
                 </blockquote>
             
                 <section class="note">
                     <h3>Заметка № <span class="time">5</span></h3> 
                     <p>
-                        Тут (по не-воле) – 
-                        начнёшь ощущать <span class="person">себя</span> –
+                        Тут (по не-воле), – начнёшь ощущать <span class="person">себя</span> –
                         <span class="person">ни-кому</span> не нужной <span class="irony">обузой</span>.
                     </p>
                 </section>
 
                 <p>
                     Войска <span class="person name">Теодена</span> – 
-                    всё ближе подходили, к опасным местам! … 
-                    До внешних <span class="irony">укреплений</span> (<span class="location name">Минас Тирита</span>) – 
+                    всё ближе подходили к <em>опасным</em> местам: 
+                    до внешних <span class="irony">укреплений</span> <span class="location name">Минас Тирита</span> – 
                     оставалось <span class="time">меньше дня</span> пути… 
                 </p>
 
@@ -872,8 +872,8 @@
                     <ul>
                         <li>
                             <q class="non-direct">
-                                Дорога (впереди) – захвачена 
-                            </q> <span class="person">(врагом)</span>,
+                                Дорога (впереди) – захвачена <span class="person">врагом</span>
+                            </q>,
                         </li>
                         <li>
                             <q class="non-direct">
@@ -883,10 +883,10 @@
                         </li>
                         <li>
                             <q class="non-direct">
-                                Большой отряд <span class="person">орков</span> – идёт, на встречу… 
+                                Большой отряд <span class="person">орков</span> – идёт на встречу… 
                                 <span class="person">Они</span> – уже в трёх-четырёх лигах
-                                (от <span class="location name">Друаданского Леса</span>)
-                            </q>.
+                                (от <span class="location name">Друаданского Леса</span>).
+                            </q>
                         </li>
                     </ul>
                 </blockquote>
