--- a/IT-Step/2019.10.14/v2.html
+++ b/IT-Step/2019.10.14/v2.html
@@ -17,14 +17,14 @@
             <h1>Добро пожаловать, – в <span class="location name">Средне-Земье</span> …</h1>
 
             <p>
-                Три-логия <span class="title">Властелин Колец</span> – без-спорно (?) <em>возглавляет</em> список 
+                Трилогия <span class="title">Властелин Колец</span> – бесспорно (?) <em>возглавляет</em> список 
                 культовых книг <span class="time">XX-го века</span>.
             </p>
 
             <p>
                 Её автор (<span class="person name"><abbr title="Джон Рональд Руэл">Дж. Р. Р.</abbr> Толкин</span>: 
                 профессор – <span class="location name">Окс-фордского</span> университета, специалист – 
-                по <span class="time">древнему</span> и <span class="time">средне-вековому</span> 
+                по <span class="time">древнему</span> и <span class="time">средневековому</span> 
                 <span class="item name">Английскому языку</span>) 
                 – создал удивительный мир: <span class="location name">Средне-Земье</span>, – 
                 который – вот уже (без малого) <span class="time">50 лет</span> 
@@ -37,11 +37,11 @@
                 в стране, управляемой <span class="person">советом Волшебников</span>, – 
                 где <span class="location nature">[в серебряных лесах]</span> – поют <span class="person">Эльфы</span>, 
                 <span class="location nature">[в глубоких пещерах]</span> –
-                добывают драго-ценный <span class="nature item">мифрил</span> 
+                добывают драгоценный <span class="nature item">мифрил</span> 
                 <span class="person">[Гномы]</span>, 
-                а без-корыстие [добрых <span class="person">Чаро-Деев</span>] – постоянно подвергается испытаниям) –
+                а без-корыстие [добрых <span class="person">чародеев</span>] – постоянно подвергается испытаниям) –
                 разгорается битва: <span class="nature">света</span> и <span class="nature">тьмы</span>, –
-                исход которой (по воле про-видения) – зависит – 
+                исход которой (по воле провидения) – зависит – 
                 от <strong>самых</strong> маленьких жителей: <span class="person">Хоббитов</span>!
             </p>
 
@@ -76,12 +76,12 @@
                 <li>фантастика.</li>
             </ul>
 
-            <p><strong>Все</strong> толкования – будут верны, – но ни одно – не станет <em>полным</em>!</p>
+            <p><strong>Все</strong> толкования – будут верны (но ни одно – не станет <em>полным</em>)!</p>
 
             <h2>О книге</h2>
 
             <p>Книга <span class="title">Возвращение <span class="person">Короля</span></span> – <span class="time">третий</span> 
-                том три-логии. Здесь – рассказывается:</p>
+                том трилогии. Здесь – рассказывается:</p>
             <ul>
                 <li>О <span class="time">последней</span> битве;</li>
                 <li>О том, как <span class="person">Хранитель</span> выполнил свою миссию;</li>
