--- a/IT-Step/2019.10.14/v1.html
+++ b/IT-Step/2019.10.14/v1.html
@@ -14,7 +14,7 @@
         <div id="start"></div>
         <article>
             
-            <h1>Добро пожаловать в <span class="location name">Средне-земье</span>!</h1>
+            <h1>Добро пожаловать в <span class="location name">Среднеземье</span>!</h1>
 
             <p>
                 Трилогия <span class="title">Властелин Колец</span> – бесспорно (?) <em>возглавляет</em> список 
@@ -23,17 +23,17 @@
 
             <p>
                 Её автор (<span class="person name"><abbr title="Джон Рональд Руэл">Дж. Р. Р.</abbr> Толкин</span>: 
-                профессор <span class="location name">Окс-фордского</span> университета, 
-                специалист по <span class="time">древнему</span> и <span class="time">средне-вековому</span> 
+                профессор <span class="location name">Оксфордского</span> университета, 
+                специалист по <span class="time">древнему</span> и <span class="time">средневековому</span> 
                 <span class="item name">английскому языку</span>) 
-                создал удивительный мир: <span class="location name">Средне-земье</span>, – 
+                создал удивительный мир: <span class="location name">Среднеземье</span>, – 
                 который вот уже (без малого) <span class="time">50 лет</span> 
                 неодолимо влечёт (к себе) <span class="person"><em>миллионы</em> читателей</span>!
             </p>
                 
             <p>
                 Там 
-                (в <span class="location name">Средне-земьи</span>: 
+                (в <span class="location name">Среднеземьи</span>: 
                 в стране, управляемой <span class="person">советом Волшебников</span>, – 
                 где <span class="location nature">[в серебряных лесах]</span> поют <span class="person">эльфы</span>, 
                 <span class="location nature">[в глубоких пещерах]</span> 
