--- a/IT-Step/2019.10.14/v2.html
+++ b/IT-Step/2019.10.14/v2.html
@@ -11,7 +11,9 @@
     </head>
 
     <body>
-        <div id="start"></div>
+        <div id="start">
+                <a href=".">На уровень выше</a>
+        </div>
         <article>
             
             <h1>Добро пожаловать в <span class="location name">Средне-Земье</span>!</h1>
