--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
     IT-Step:
     <ol>
-      <li><a href="IT-Step/2019.10.14/index.html">2019.10.14</a> - Отрывок из серии книг «Властелин Колец»</li>
-      <li><a href="IT-Step/2019.10.24/index.html">2019.10.24</a> - Добавлен перевод на белорусский. Добавлено верхнее меню.</li>
+      <li><a href="IT-Step/2019.10.14/index.html">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
+      <li><a href="IT-Step/2019.10.24/index.html">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
     </ol>
   </body>
 </html>
