--- a/IT-Step/2019.10.24/index.html
+++ b/IT-Step/2019.10.24/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div>
+        <a href=".">Перейти на уровень выше?</a>
+    </div>
+    <div>
         <ul>Язык:
             <li><a href="russian.html">Русский</a></li>
             <li><a href="belarussian.html">Белорусский</a></li>
