--- a/IT-Step/2019.10.24/index.html
+++ b/IT-Step/2019.10.24/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <a href=".">Перейти на уровень выше?</a>
+        <a href="..">Перейти на уровень выше?</a>
     </div>
     <div>
         <ul>Язык:
