--- a/IT-Step/2019.10.24/index.html
+++ b/IT-Step/2019.10.24/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div>
-        <a href="..">Перейти на уровень выше?</a>
+        <ul>
+            <li><a href="..">Переход «..».</a></li>
+            <li><a href="../..">Переход «../..».</a></li>
+        </ul>
     </div>
     <div>
         <ul>Язык:
