--- a/IT-Step/2019.10.24/index.html
+++ b/IT-Step/2019.10.24/index.html
@@ -9,8 +9,7 @@
 <body>
     <div>
         <ul>
-            <li><a href="..">Переход «..».</a></li>
-            <li><a href="../..">Переход «../..».</a></li>
+            <li><a href="../..">Переход на уровень выше («../..»).</a></li>
         </ul>
     </div>
     <div>
