--- a/IT-Step/2019.10.24/index.html
+++ b/IT-Step/2019.10.24/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div>
-        <ul>
-            <li><a href="../..">Переход на уровень выше («../..»).</a></li>
-        </ul>
+        <a href="../..">Переход на уровень выше («../..»).</a>
     </div>
     <div>
         <ul>Язык:
