--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <ol>
       <li><a href="IT-Step/2019.10.14/index.html">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
       <li><a href="IT-Step/2019.10.24/index.html">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
+      <li><a href="IT-Step/2019.10.28/index.html">2019.10.24</a> - Русская версия переоформлена внутрь “Bootstrap” (сделан “Scroll-spy”).</li>
     </ol>
   </body>
 </html>
