--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <title>Nikolice @ GitHub</title>
   </head>
   <body>
-    IT-Step:
-    <ol>
-      <li><a href="IT-Step/2019.10.14/index.html">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
-      <li><a href="IT-Step/2019.10.24/index.html">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
-      <li><a href="IT-Step/2019.10.28/index.html">2019.10.28</a> - Русская версия переоформлена внутрь “Bootstrap” (сделан “Scroll-spy”).</li>
-    </ol>
+    <div>
+      IT-Step, домашнее задание по вёрстке абстрактного текста:
+      <ol>
+        <li><a href="IT-Step/2019.10.14">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
+        <li><a href="IT-Step/2019.10.24">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
+        <li><a href="IT-Step/2019.10.28">2019.10.28</a> - Русская версия переоформлена внутрь “Bootstrap” (сделан “Scroll-spy”).</li>
+      </ol>
+    </div>
+    <div>Астрология: <a href="astrology">противосолнечная точка</a>.</div>
   </body>
 </html>
