--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
     <title>Nikolice @ GitHub</title>
   </head>
   <body>
-    <div>
-      IT-Step, домашнее задание по вёрстке абстрактного текста:
-      <ol>
-        <li><a href="IT-Step/2019.10.14">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
-        <li><a href="IT-Step/2019.10.24">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
-        <li><a href="IT-Step/2019.10.28">2019.10.28</a> - Русская версия переоформлена внутрь “Bootstrap” (сделан “Scroll-spy”).</li>
-      </ol>
-    </div>
-    <div>Астрология: <a href="astrology">противосолнечная точка</a>.</div>
+    <ul>
+      <li>
+        <div>
+          <p>IT-Step, домашнее задание по вёрстке абстрактного текста:</p>
+          <ol>
+            <li><a href="IT-Step/2019.10.14">2019.10.14</a> - Отрывок из серии книг «Властелин Колец».</li>
+            <li><a href="IT-Step/2019.10.24">2019.10.24</a> - Добавлено: перевод на белорусский, верхнее меню.</li>
+            <li><a href="IT-Step/2019.10.28">2019.10.28</a> - Русская версия переоформлена внутрь “Bootstrap” (сделан “Scroll-spy”).</li>
+          </ol>
+        </div>
+      </li>
+      <li>
+        <p><a href="https://nikolice.github.io/Learn-you-a-Haskell-for-great-good">Haskell</a></p>
+      </li>
+      <li>
+        <p><div>Астрология: <a href="astrology">противосолнечная точка</a>.</div></p>
+      </li>
+    </ul>
   </body>
 </html>
