--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li>
         <p><div>Астрология: <a href="astrology">противосолнечная точка</a>.</div></p>
       </li>
+      <li>
+        <p><div>Andersen Test Task (JS): <a href="andersen">URL</a>.</div></p>
+      </li>
     </ul>
   </body>
 </html>
